finished working on tablet and desktop animations fixing some inconsistencies

--- a/src/App.css
+++ b/src/App.css
@@ -93,6 +93,8 @@ button h3 {
     inset: 0;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 10;
+    opacity: 0;
+    pointer-events: none;
 }
 
 .modal {
